; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_load-jbig2.c_fz_load_jbig2_info_subimage.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_load-jbig2.c_fz_load_jbig2_info_subimage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.info = type { i32, i32, i32, i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fz_load_jbig2_info_subimage(i32* %0, i8* %1, i64 %2, i32* %3, i32* %4, i32* %5, i32* %6, i32** %7, i32 %8) #0 {
  %10 = alloca i32*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i32**, align 8
  %18 = alloca i32, align 4
  %19 = alloca %struct.info, align 4
  store i32* %0, i32** %10, align 8
  store i8* %1, i8** %11, align 8
  store i64 %2, i64* %12, align 8
  store i32* %3, i32** %13, align 8
  store i32* %4, i32** %14, align 8
  store i32* %5, i32** %15, align 8
  store i32* %6, i32** %16, align 8
  store i32** %7, i32*** %17, align 8
  store i32 %8, i32* %18, align 4
  %20 = bitcast %struct.info* %19 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %20, i8 0, i64 24, i1 false)
  %21 = load i32*, i32** %10, align 8
  %22 = load i8*, i8** %11, align 8
  %23 = load i64, i64* %12, align 8
  %24 = load i32, i32* %18, align 4
  %25 = call i32 @jbig2_read_image(i32* %21, %struct.info* %19, i8* %22, i64 %23, i32 1, i32 %24)
  %26 = load i32*, i32** %10, align 8
  %27 = getelementptr inbounds %struct.info, %struct.info* %19, i32 0, i32 4
  %28 = load i32, i32* %27, align 4
  %29 = call i32* @fz_keep_colorspace(i32* %26, i32 %28)
  %30 = load i32**, i32*** %17, align 8
  store i32* %29, i32** %30, align 8
  %31 = getelementptr inbounds %struct.info, %struct.info* %19, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = load i32*, i32** %13, align 8
  store i32 %32, i32* %33, align 4
  %34 = getelementptr inbounds %struct.info, %struct.info* %19, i32 0, i32 1
  %35 = load i32, i32* %34, align 4
  %36 = load i32*, i32** %14, align 8
  store i32 %35, i32* %36, align 4
  %37 = getelementptr inbounds %struct.info, %struct.info* %19, i32 0, i32 2
  %38 = load i32, i32* %37, align 4
  %39 = load i32*, i32** %15, align 8
  store i32 %38, i32* %39, align 4
  %40 = getelementptr inbounds %struct.info, %struct.info* %19, i32 0, i32 3
  %41 = load i32, i32* %40, align 4
  %42 = load i32*, i32** %16, align 8
  store i32 %41, i32* %42, align 4
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @jbig2_read_image(i32*, %struct.info*, i8*, i64, i32, i32) #2

declare dso_local i32* @fz_keep_colorspace(i32*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
